<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">pguide</string>
    <string name="SelCity">Select</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="CityHint">Search by name.</string>
    <string name="SearchBtn">Search</string>
    <string name="SelBtn">Select</string>
    <string name="DefaultStr">DefaultStr</string>
    <string name="HotCity">Popular:</string>
    <string name="SearchRes">Result:</string>
    <string name="NoCityInput">Please Input the city.</string>
    <string name="NoCityFound">Sorry, I can\'t find this city.</string>
    <string name="Preferences_head">Preferences</string>
    <string name="CitySelTitle">City :</string>
    <string name="duration">Duration :</string>
    <string name="durationlen">Days</string>
    <string name="durationhint"></string>
    <string name="caonima">Press to select.</string>
    <string name="prefer">Preferences: </string>
    <string name="rqspot">人气景点</string>
    <string name="htspot">热门景点</string>
    <string name="lpspot">低价</string>
    <string name="hsspot">好口碑</string>
    <string name="znspot">猜测我的喜好(undo)</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="IP">192.168.22.10</string>
    <string name="PO">6000</string>
    <string name="title_activity_user_sel">UserSel</string>
	<string name="guessyoulike">Maybe you like</string>
	<string name="Ilike">I like</string>
	<string name="znspot">猜测我的喜好(undo)</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="longtex">"    很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长很长"</string>
	
</resources>