<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/SearchBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/SearchBtn" />

    <EditText
        android:id="@+id/SearchText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/SearchBtn"
        android:hint="@string/CityHint"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@id/SearchBtn"
        android:singleLine="true" />
    <TextView 
        android:id="@+id/ResultTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/SearchText"
        android:layout_below="@id/SearchText"
        android:text="@string/DefaultStr"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        />
    <ListView 
        android:id="@+id/CityList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ResultTitle"
        android:layout_below="@id/ResultTitle"
        android:layout_marginTop="10dp"
        ></ListView>
    <!--
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/Head" >"

        <EditText
            android:id="@+id/SearchCity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/CityHint"
             />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/SearchBtn" />
    </LinearLayout>
    -->

</RelativeLayout>